# dharmaQA

./: .gitignore  README.md  app.py  colb_requirements.txt  ingest.py  ingest_colbert.ipynb  ingest_colbert.py  pyproject.toml  utils.py
.lancedb/dharma_qa.lance/_transactions/: 0-c076c50a-ad68-4b4d-bef3-0d972e5c7780.txn  1-c4df9e1b-c10d-4342-91a6-9ed3c3a351a7.txn  2-5bb7c566-0d40-4bae-99fa-1e465c645e36.txn
lancedb/dharma_qa.lance/: _latest.manifest
lancedb/dharma_qa.lance/_transactions/: 0-e9e9baa6-6dbc-4a55-826e-25e0941e4c0f.txn  1-79c597bc-50ae-4571-9da2-7742514b6639.txn  2-937aff73-d6ab-4104-9ced-39292ea9a640.txn
lancedb/dharma_qa.lance/_versions/: 1.manifest  2.manifest  3.manifest
lancedb/dharma_qa.lance/data/: 4490aa7b-818d-4a1b-9f38-f5154ddc7074.lance  64121b25-70c5-4565-b8a3-b4a346b90e57.lance
